--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,6 @@
 	<div class="jumbotron">
 		<h1>H2GO</h2>
 		<p>Where to get hydrated on the go!</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+		<p><a class="btn btn-primary btn-lg" href="https://youtu.be/dQw4w9WgXcQ" role="button">Learn more</a></p>
 	</div>
 </div>
