--- a/app/assets/stylesheets/bike_racks.scss
+++ b/app/assets/stylesheets/bike_racks.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the waterfountains controller here.
+// Place all the styles related to the BikeRacks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
