--- a/app/views/bike_racks/index.html.erb
+++ b/app/views/bike_racks/index.html.erb
@@ -1,27 +1,51 @@
 <p id="notice"><%= notice %></p>
 
+
+<style>
+h1 {
+    position: relative;
+    right: -10px;
+}
+th, td {
+    padding: 1px;
+    text-align: center;
+}
+th, tr:nth-child(even) {
+    background-color: #eee;
+}
+th, tr:nth-child(odd) {
+   background-color:#fff;
+}
+th, td td {
+    background-color: black;
+    color: white;
+}
+</style>
+
+
+
 <h1>Listing Bike Racks</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Address</th>
-      <th>Quantity</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<table border="1" style="width:50%; margin-left:1%">
+  <tr>
+    <th>Address</th> 
+    <th>Quantity</th>
+    <th>Actions</th>
+  </tr>
+  
   <tbody>
     <% @bike_racks.each do |bike_rack| %>
-      <tr>
-        <td><%= bike_rack.address %></td>
-        <td><%= bike_rack.quantity %></td>
-        <td><%= link_to 'Show', bike_rack %></td>
-        <td><%= link_to 'Edit', edit_bike_rack_path(bike_rack) %></td>
-        <td><%= link_to 'Destroy', bike_rack, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <td><%= bike_rack.address %></td>
+      <td><%= bike_rack.quantity %></td>
+      <td><%= link_to 'Show', bike_rack %>
+        <%= link_to 'Edit', edit_bike_rack_path(bike_rack) %>
+        <%= link_to 'Destroy', bike_rack, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
     <% end %>
   </tbody>
+</table>
+
 </table>
 
 <br>
