--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -1,16 +1,36 @@
 <p id="notice"><%= notice %></p>
 
+
+<style>
+h1 {
+    position: relative;
+    right: -10px;
+}
+th, td {
+    padding: 1px;
+    text-align: center;
+}
+th, tr:nth-child(even) {
+    background-color: #eee;
+}
+th, tr:nth-child(odd) {
+   background-color:#fff;
+}
+th, td td {
+    background-color: black;
+    color: white;
+}
+</style>
+
 <h1>Listing Water Fountains</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Location</th>
-      <th>Lat</th>
-      <th>Lon</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<table border="1" style="width:50%; margin-left:1%">
+  <tr>
+    <th>Location</th> 
+    <th>Latitude</th>
+    <th>Longitude</th>
+    <th>Actions</th>
+  </tr>
 
   <tbody>
     <% @water_fountains.each do |water_fountain| %>
@@ -18,13 +38,17 @@
         <td><%= water_fountain.location %></td>
         <td><%= water_fountain.lat %></td>
         <td><%= water_fountain.lon %></td>
-        <td><%= link_to 'Show', water_fountain %></td>
-        <td><%= link_to 'Edit', edit_water_fountain_path(water_fountain) %></td>
-        <td><%= link_to 'Destroy', water_fountain, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', water_fountain %>
+        <%= link_to 'Edit', edit_water_fountain_path(water_fountain) %>
+        <%= link_to 'Destroy', water_fountain, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+</table>
+
+
 
 <br>
 
