--- a/app/views/bike_racks/show.html.erb
+++ b/app/views/bike_racks/show.html.erb
@@ -1,5 +1,15 @@
 <p id="notice"><%= notice %></p>
 
+<style>
+p, img  {
+    position: relative;
+    right: -10px;
+}
+</style>
+
+
+
+
 <p>
   <strong>Address:</strong>
   <%= @bike_rack.address %>
@@ -10,5 +20,22 @@
   <%= @bike_rack.quantity %>
 </p>
 
+
+
+
+<html>
+<body>
+
+<img src="https://maps.googleapis.com/maps/api/staticmap?center=2366+Main+Mall,BC&zoom=14&size=300x300&markers=2366+Main+Mall,BC&sensor=false" alt="Lamp" width="150" height="150">
+
+</body>
+</html>
+
+
+<DIV style="position: absolute; top:230px; left:10px; width:200px; height:25px">
 <%= link_to 'Edit', edit_bike_rack_path(@bike_rack) %> |
 <%= link_to 'Back', bike_racks_path %>
+</DIV>
+
+
+
