--- a/app/views/water_fountains/show.html.erb
+++ b/app/views/water_fountains/show.html.erb
@@ -1,5 +1,14 @@
 <p id="notice"><%= notice %></p>
 
+
+<style>
+p, img  {
+    position: relative;
+    right: -10px;
+}
+</style>
+
+
 <p>
   <strong>Location:</strong>
   <%= @water_fountain.location %>
@@ -15,5 +24,17 @@
   <%= @water_fountain.lon %>
 </p>
 
+
+
+<html>
+<body>
+
+<img src="https://maps.googleapis.com/maps/api/staticmap?center=2366+Main+Mall,BC&zoom=14&size=300x300&markers=2366+Main+Mall,BC&sensor=false" alt="Lamp" width="150" height="150">
+
+</body>
+</html>
+
+<DIV style="position: absolute; top:260px; left:10px; width:200px; height:25px">
 <%= link_to 'Edit', edit_water_fountain_path(@water_fountain) %> |
 <%= link_to 'Back', water_fountains_path %>
+</DIV>
