--- a/app/views/bike_racks/index.html.erb
+++ b/app/views/bike_racks/index.html.erb
@@ -1,28 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-
-<style>
-h1 {
-    position: relative;
-    right: -10px;
-}
-th, td {
-    padding: 1px;
-    text-align: center;
-}
-th, tr:nth-child(even) {
-    background-color: #eee;
-}
-th, tr:nth-child(odd) {
-   background-color:#fff;
-}
-th, td td {
-    background-color: black;
-    color: white;
-}
-</style>
-
-
+<%= render 'shared/nav'%>
 
 <h1>Listing Bike Racks</h1>
 
