--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -18,7 +18,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Locate stuff! <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Water Fountains</a></li>
+            <li><%= link_to fountainsmap_path, 'data-no-turbolink' => true do %>
+              Water Fountains Map</li>
+              <% end %>
             <li><a href="#">Bike Racks</a></li>
             <li><%= link_to water_fountains_path class: 'btn btn-success' do %> 
               Show Water Fountains Table
