Complemted map functionality for bike racks, BR model changed

--- a/app/views/bike_racks/_form.html.erb
+++ b/app/views/bike_racks/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :quantity %><br>
     <%= f.number_field :quantity %>
   </div>
+  <div class="field">
+    <%= f.label :latitude %><br>
+    <%= f.number_field :latitude %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude %><br>
+    <%= f.number_field :longitude %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
