--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -1,61 +1,20 @@
+<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+
 <%= render 'shared/nav' %>
 
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-		<meta charset="utf-8">
-		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
-		<script>
 
-function initialize(){
-  var myLatlng = new google.maps.LatLng(49.263236,-123.115028);
-  var mapOptions = {
-    zoom: 13,
-    center: myLatlng
-  }
-  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-
-  var marker = new google.maps.Marker({
-      position: myLatlng,
-      map: map,
-      title: 'Hello World!'
-  });
-
-  marker.setMap(map);
-}
+<div id="map-container">
+  <div id="map"></div>
+</div>
 
 
-google.maps.event.addDomListener(window, 'load', initialize);
 
-// function addMarker(latlon, map){
-// 	var marker = new google.map.Marker({
-// 		position: latlon,
-// 		title: 'titties'
-// 	});
-// 	marker.setMap(map);
-// }
-
-// var home = new google.maps.LatLng(49.263278, -123.090025);
-
-// addMarker(home, map);
-
- 		</script>
-
-</head>
-
-<% content_for(:javascript) do %>
-$(function() {
-	initialize();
+<script type='text/javascript'>
+handler = Gmaps.build('Google');
+handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  markers = handler.addMarkers(<%=raw @hash.to_json %>);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
 });
-<%end%>
-
-<body>
-
- <div id="map-container">
-      <div id="map-canvas"></div>
- </div>
-
- <%= @bike_racks %>
-
-</body>
+</script>
