--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -16,21 +16,27 @@
       <ul class="nav navbar-nav">
         <li><a href="#">About <span class="sr-only">(current)</span></a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Locate stuff! <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Water Fountains <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to fountainsmap_path, 'data-no-turbolink' => true do %>
               Water Fountains Map</li>
               <% end %>
-            <li><a href="#">Bike Racks</a></li>
             <li><%= link_to water_fountains_path class: 'btn btn-success' do %> 
               Show Water Fountains Table
                 <% end %>
             </li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Bike Racks <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to mapracks_path, 'data-no-turbolink' => true do %>
+              Bike Racks Map</li>
+              <% end %>
             <li><%= link_to bike_racks_path class: 'btn btn-success' do %> 
               Show Bike Racks Table
                 <% end %>
             </li>
-
           </ul>
         </li>
       </ul>
