--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,7 +8,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">H2G0</a>
+      <%= link_to root_path class: "navbar-brand" do %>
+      <p class="navbar-brand" href="#">H2G0</p>
+      <% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
