--- a/app/views/bike_racks/show.html.erb
+++ b/app/views/bike_racks/show.html.erb
@@ -22,11 +22,14 @@ p, img  {
 
 
 
-
 <html>
 <body>
 
-<img src="https://maps.googleapis.com/maps/api/staticmap?center=2366+Main+Mall,BC&zoom=14&size=300x300&markers=2366+Main+Mall,BC&sensor=false" alt="Lamp" width="150" height="150">
+
+<% parseArr = parse(@bike_rack) %>
+<% temp = imgStr(parseArr) %>
+
+<img src=<%= temp %> alt="Lamp" width="150" height="150">
 
 </body>
 </html>
