--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to root_path class: "navbar-brand" do %>
-      <p class="navbar-brand" href="#">H2G0</p>
+      <p class="navbar-brand" href="#">H2GO</p>
       <% end %>
     </div>
 
