--- a/app/views/water_fountains/show.html.erb
+++ b/app/views/water_fountains/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
-<%= render "welcome/nav"%>
+<%= render "shared/nav"%>
+<!<p id="notice"><%= notice %></p>
 
 <style>
 p, img  {
