--- a/app/views/bike_racks/show.html.erb
+++ b/app/views/bike_racks/show.html.erb
@@ -1,4 +1,7 @@
+
+
 <p id="notice"><%= notice %></p>
+<%= render "welcome/nav"%>
 
 <style>
 p, img  {
@@ -21,21 +24,36 @@ p, img  {
 </p>
 
 
+<p>
+  <strong>Latitude:</strong>
+  <%= @bike_rack.latitude %>
+</p>
+
+<p>
+  <strong>Longitude:</strong>
+  <%= @bike_rack.longitude %>
+</p>
+
+
+
 
 <html>
 <body>
 
 
 <% parseArr = parse(@bike_rack) %>
-<% temp = imgStr(parseArr) %>
+<% html = imgStr(parseArr) %>
 
-<img src=<%= temp %> alt="Lamp" width="150" height="150">
+<% img_height = 150 %>
+
+<img src=<%= html %> alt="Lamp" width=<%= img_height.to_s %> height=<%= img_height.to_s %> >
 
 </body>
 </html>
 
+<!-- add 200 to height for positioning -->
+<DIV style="position: absolute; top:350px; left:10px; width:200px; height:25px">
 
-<DIV style="position: absolute; top:230px; left:10px; width:200px; height:25px">
 <%= link_to 'Edit', edit_bike_rack_path(@bike_rack) %> |
 <%= link_to 'Back', bike_racks_path %>
 </DIV>
