--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -1,8 +1,11 @@
-<p id="notice"><%= notice %></p>
 
 <%= render 'shared/nav'%>
 
+<p id="notice"><%= notice %></p>
+
 <h1>Listing Water Fountains</h1>
+
+<% populateWFData %>
 
 <table border="1" style="width:50%; margin-left:1%">
   <tr>
@@ -15,7 +18,7 @@
   <tbody>
     <% @water_fountains.each do |water_fountain| %>
       <tr>
-        <td><%= water_fountain.location %></td>
+        <td><%= shortenLocation(water_fountain.location) %></td>
         <td><%= water_fountain.lat %></td>
         <td><%= water_fountain.lon %></td>
         <td><%= link_to 'Show', water_fountain %>
@@ -28,7 +31,7 @@
 
 </table>
 
-<% parser %>
+
 
 <br>
 
