--- a/app/views/bike_racks/index.html.erb
+++ b/app/views/bike_racks/index.html.erb
@@ -5,7 +5,7 @@
 
 <h1>Listing Bike Racks</h1>
 
-<% populateBRData %>
+
 
 <table border="1" style="width:50%; margin-left:1%">
   <tr>
@@ -40,3 +40,6 @@
 <%= link_to "<< Back to Home", root_path %>
 
 <%= link_to 'New Bike rack', new_bike_rack_path %>
+
+<%= button_to "Populate", bikeracks_populateBRData_path %>
+
