--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -5,7 +5,7 @@
 
 <h1>Listing Water Fountains</h1>
 
-<% populateWFData %>
+
 
 <table border="1" style="width:50%; margin-left:1%">
   <tr>
@@ -38,3 +38,5 @@
 <%= link_to "<< Back to Home", root_path %>
 
 <%= link_to 'New Water fountain', new_water_fountain_path %>
+
+<%= button_to "Populate", waterfountains_populateWFData_path %>
