--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -23,6 +23,9 @@
             <li><%= link_to fountainsmap_path, 'data-no-turbolink' => true do %>
               Water Fountains Map</li>
               <% end %>
+            <li><%= link_to waterfountains_heatmap_path, 'data-no-turbolink' => true do %>
+              Water Fountains Heat Map <font color="blue"><i>NEW</i></font></li>
+              <% end %>
             <li><%= link_to water_fountains_path class: 'btn btn-success' do %> 
               Show Water Fountains Table
                 <% end %>
@@ -34,6 +37,9 @@
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to mapracks_path, 'data-no-turbolink' => true do %>
               Bike Racks Map</li>
+              <% end %>
+            <li><%= link_to bikeracks_heatmap_path, 'data-no-turbolink' => true do %>
+              Bike Racks Heat Map <font color="blue"><i>NEW</i></font></li>
               <% end %>
             <li><%= link_to bike_racks_path class: 'btn btn-success' do %> 
               Show Bike Racks Table
