--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -1,20 +1,88 @@
-<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
-<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry"></script>
 
 <%= render 'shared/nav'%>
 
 
+
+
+
 <div id="map-container">
+	<div id="panel">
+      <input id="address" type="textbox" value="Sydney, NSW">
+      <input type="button" value="Geocode" onclick="codeAddress()">
+    </div>
   <div id="map"></div>
 </div>
 
+<script>
+var geocoder;
+var map;
+var waterFountains = [];
+var wf = (<%=raw  @water_fountains.to_json %>);
+var myLatLng = new google.maps.LatLng(49.279621, -123.125496);
+var myBounds = new google.maps.LatLngBounds(
+		      new google.maps.LatLng(49.195335, -123.244972),
+		      new google.maps.LatLng(49.292609, -122.965508));
+
+function initialize() {
+  geocoder = new google.maps.Geocoder();
+    map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 11,
+    center: myLatLng,
+    mapTypeId: google.maps.MapTypeId.TERRAIN
+  });
 
 
-<script type='text/javascript'>
-handler = Gmaps.build('Google');
-handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers(<%=raw @hash.to_json %>);
-  handler.bounds.extendWith(markers);
-  handler.fitMapToBounds();
-});
-</script>
+  // var rectangle = new google.maps.Rectangle({
+  //   strokeColor: '#FF0000',
+  //   strokeOpacity: 0.8,
+  //   strokeWeight: 2,
+  //   fillColor: '#FF0000',
+  //   fillOpacity: 0.35,
+  //   map: map,
+  //   bounds: myBounds
+  // });
+}
+
+function computeDistance(pt1, pt2){
+	return google.maps.geometry.spherical.computeDistanceBetween(pt1, pt2);
+};
+
+
+  function codeAddress() {
+  var address = document.getElementById('address').value;
+  geocoder.geocode( { 'address': address}, function(results, status) {
+    if (status == google.maps.GeocoderStatus.OK) {
+    	if(myBounds.contains(results[0].geometry.location)){
+	      map.setCenter(results[0].geometry.location);
+
+	      for(i = 0; i < wf.length; i++) {
+	      	var fountain = wf[i];
+	      	var fountainLatLng = new google.maps.LatLng(fountain.lat, fountain.lon);
+	      	if(computeDistance(results[0].geometry.location, fountainLatLng) < 1000){
+	      		var marker = new google.maps.Marker({
+	      			map: map,
+	      			position: fountainLatLng, 
+	      		});
+	      	}
+	      }
+
+	  } else {
+	  	alert("Sorry, we don't cover this area.... yet!");
+	  }
+    } else {
+      alert('Geocode was not successful for the following reason: ' + status);
+    }
+  });
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+
+    </script>
+ 
+
+
