--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -18,7 +18,7 @@
   <tbody>
     <% @water_fountains.each do |water_fountain| %>
       <tr>
-        <td><%= shortenLocation(water_fountain.location) %></td>
+        <td><%= WaterFountain.shortenLocation(water_fountain.location) %></td>
         <td><%= water_fountain.lat %></td>
         <td><%= water_fountain.lon %></td>
         <td><%= link_to 'Show', water_fountain %>
