--- a/app/views/water_fountains/show.html.erb
+++ b/app/views/water_fountains/show.html.erb
@@ -15,7 +15,7 @@ p, img  {
 
 <p>
   <strong>Location:</strong>
-  <%= shortenLocation(@water_fountain.location) %>
+  <%= WaterFountain.shortenLocation(@water_fountain.location) %>
 </p>
 
 <p>
@@ -33,8 +33,8 @@ p, img  {
 <html>
 <body>
 
-  <% latLonArr = parseLatLon(@water_fountain) %>
-  <% html = imgStr(latLonArr) %>
+  <% latLonArr = WaterFountain.parseLatLon(@water_fountain) %>
+  <% html = WaterFountain.imgStr(latLonArr) %>
 
 <% img_height = 150 %>
 
