--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -11,8 +11,8 @@
 
 <div id="map-container">
 	<div id="panel">
-      <input id="address" type="textbox" value="Sydney, NSW">
-      <input type="button" value="Geocode" onclick="codeAddress()">
+      <input id="address" type="textbox" value="Vancouver, BC">
+      <input type="button" value="Find Bike Racks nearby" onclick="codeAddress()">
     </div>
   <div id="map"></div>
 </div>
@@ -62,12 +62,13 @@ function computeDistance(pt1, pt2){
 	      map.setCenter(results[0].geometry.location);
 	      
 	      var counter = 0;
+	      var radius = 1000;
 
 	      for(i = 0; i < br.length; i++) {
 	      	
 	      	var bikeRack = br[i];
 	      	var rackLatLng = new google.maps.LatLng(bikeRack.latitude, bikeRack.longitude);
-	      	if(computeDistance(results[0].geometry.location, rackLatLng) < 1000){
+	      	if(computeDistance(results[0].geometry.location, rackLatLng) < radius){
 	      		counter++;
 	      		var marker = new google.maps.Marker({
 	      			map: map,
