--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -11,8 +11,8 @@
 
 <div id="map-container">
 	<div id="panel">
-      <input id="address" type="textbox" value="Sydney, NSW">
-      <input type="button" value="Geocode" onclick="codeAddress()">
+      <input id="address" type="textbox" value="Vancouver, BC">
+      <input type="button" value="Find Water Fountains nearby" onclick="codeAddress()">
     </div>
   <div id="map"></div>
 </div>
@@ -60,11 +60,12 @@ function computeDistance(pt1, pt2){
 	      map.setCenter(results[0].geometry.location);
 	      
 	      var counter = 0;
+	      var radius = 1000;
 
 	      for(i = 0; i < wf.length; i++) {
 	      	var fountain = wf[i];
 	      	var fountainLatLng = new google.maps.LatLng(fountain.lat, fountain.lon);
-	      	if(computeDistance(results[0].geometry.location, fountainLatLng) < 100){
+	      	if(computeDistance(results[0].geometry.location, fountainLatLng) < radius){
 	      	  counter++;
 	      		var marker = new google.maps.Marker({
 	      			map: map,
