--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -11,7 +11,7 @@
 
 <div id="map-container">
 	<div id="panel">
-      <input id="address" type="textbox" value="Sydney, NSW">
+      <input id="address" type="textbox" value="Vancouver BC">
       <input type="button" value="Geocode" onclick="codeAddress()">
     </div>
   <div id="map"></div>
