--- a/app/assets/stylesheets/water_fountains.scss
+++ b/app/assets/stylesheets/water_fountains.scss
@@ -27,7 +27,7 @@ th, td td {
    border-color: #fff;
    border-style: solid;
    box-shadow: 2px 2px 10px #B1B1B1;
-   margin-top: 25px;
+   margin-top: 20px;
    border-width: 7px;
  }
  #map {
@@ -35,13 +35,6 @@ th, td td {
    width: 100%;
  }
 
-   #panel {
-        position: absolute;
-        top: 55px;
-        left: 50%;
-        margin-left: -180px;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-      }
+ .row {
+  top: 10px;
+ }
