auto-clears database when grabbing, and counts items in table

--- a/app/views/bike_racks/index.html.erb
+++ b/app/views/bike_racks/index.html.erb
@@ -3,7 +3,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Bike Racks</h1>
+<h1>Listing Bike Racks :: Total:<%= BikeRack.all.count %></h1>
 
 
 
