--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -3,7 +3,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Water Fountains</h1>
+<h1>Listing Water Fountains :: Total: <%= WaterFountain.all.count %></h1>
 
 
 
