--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -14,7 +14,9 @@
             <span class="input-group-btn">
             <button class="btn btn-default" type="button" onclick="codeAddress()">Find bike racks!</button>
             </span>
-            <input id="address" class="form-control" placeholder="Enter address in Vancouver BC...">
+              <form onsubmit="codeAddress(); return false">
+                <input id="address" class="form-control" placeholder="Enter address in Vancouver BC...">
+              </form>
         </div><!-- /input-group --> 
       </div>
 
