--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -16,7 +16,9 @@
       			<span class="input-group-btn">
         		<button class="btn btn-default" type="button" onclick="codeAddress()">Find water fountains!</button>
       			</span>
-      			<input id="address" class="form-control" placeholder="Enter address in Vancouver BC...">
+              <form onsubmit="codeAddress(); return false">
+      			   <input id="address" class="form-control" placeholder="Enter address in Vancouver BC...">
+              </form>
     		</div><!-- /input-group -->
     	</div>
   	</div>
