--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -69,6 +69,7 @@ function computeDistance(pt1, pt2){
     if (status == google.maps.GeocoderStatus.OK) {
     	if(myBounds.contains(results[0].geometry.location)){
 	      map.setCenter(results[0].geometry.location);
+        map.setZoom(14);
 	      
 	      var counter = 0;
 	      var radius = 1000;
