--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -50,7 +50,7 @@
       </ul>
       <button type="button" class="btn btn-default navbar-btn">Sign in</button>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Donate</a></li>
+        <li><a href="https://youtu.be/dQw4w9WgXcQ">Donate</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
