--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,1 +1,70 @@
 <%= render 'shared/nav'%>
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+
+
+
+p.text1 {
+    position: fixed;
+    font-family: Swiss;
+    font-size: 25pt;
+    top: 300px;
+    left: 150px;
+}
+
+p.text2 {
+    position: fixed;
+    font-family: Swiss;
+    font-size: 25pt;
+    top: 300px;
+    left: 450px;
+}
+
+p.text3 {
+    position: fixed;
+    font-family: Swiss;
+    font-size: 25pt;
+    top: 300px;
+    right: 450px;
+}
+
+
+p.text4 {
+    position: fixed;
+    font-family: Swiss;
+    font-size: 25pt;
+    top: 300px;
+    right: 250px;
+}
+
+
+
+</style>
+</head>
+<body>
+
+<p class="text1">
+Armando Bollain
+</p>
+
+<p class="text2">
+Sean Dibango
+</p>
+
+<p class="text3">
+Paul Tran
+</p>
+
+<p class="text4">
+Ryan Hsu
+</p>
+
+
+
+
+</body>
+</html>
