Added comments referencing  lines of code taken from Google Maps API Samples

--- a/app/views/bike_racks/map.html.erb
+++ b/app/views/bike_racks/map.html.erb
@@ -62,6 +62,8 @@ function computeDistance(pt1, pt2){
         markers = [];
     };
 
+
+ //The following js functions are based on the Google Maps API Samples
   function codeAddress() {
     deleteMarkers();
   var address = document.getElementById('address').value;
