--- a/app/views/water_fountains/heatmap.html.erb
+++ b/app/views/water_fountains/heatmap.html.erb
@@ -37,6 +37,7 @@ function initialize() {
   heatmap.setMap(map);
 }
 
+//The following js functions are based on the Google Maps API Samples
 function toggleHeatmap() {
   heatmap.setMap(heatmap.getMap() ? null : map);
 }
