--- a/app/views/water_fountains/map.html.erb
+++ b/app/views/water_fountains/map.html.erb
@@ -65,7 +65,7 @@ function computeDistance(pt1, pt2){
         markers = [];
     };
 
-
+//The following js functions are based on the Google Maps API Samples
   function codeAddress() {
     deleteMarkers();
   var address = document.getElementById('address').value;
