--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -13,7 +13,7 @@ p.text1 {
     font-family: Swiss;
     font-size: 25pt;
     top: 300px;
-    left: 150px;
+    left: 100px;
 }
 
 p.text2 {
@@ -21,7 +21,7 @@ p.text2 {
     font-family: Swiss;
     font-size: 25pt;
     top: 300px;
-    left: 450px;
+    left: 380px;
 }
 
 p.text3 {
@@ -29,7 +29,7 @@ p.text3 {
     font-family: Swiss;
     font-size: 25pt;
     top: 300px;
-    right: 450px;
+    right: 340px;
 }
 
 
@@ -38,7 +38,7 @@ p.text4 {
     font-family: Swiss;
     font-size: 25pt;
     top: 300px;
-    right: 250px;
+    right: 150px;
 }
 
 
@@ -52,7 +52,7 @@ Armando Bollain
 </p>
 
 <p class="text2">
-Sean Dibango
+Sean Blair
 </p>
 
 <p class="text3">
