--- a/app/views/bike_racks/heatmap.html.erb
+++ b/app/views/bike_racks/heatmap.html.erb
@@ -1,12 +1,9 @@
-<%= render 'shared/nav'%>
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Heatmaps</title>
-    
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=visualization"></script>
 
+
+<meta charset="utf-8">
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=visualization"></script>
+
+<%= render 'shared/nav'%>
   
 
 <script type="text/javascript">
@@ -25,7 +22,7 @@ function initialize() {
     mapTypeId: google.maps.MapTypeId.SATELLITE
   };
 
-  map = new google.maps.Map(document.getElementById('map-canvas'),
+  map = new google.maps.Map(document.getElementById('map'),
       mapOptions);
 
   var pointArray = new google.maps.MVCArray(bikeRacks);
@@ -74,9 +71,9 @@ function changeOpacity() {
 google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
-  </head>
+ 
 
-  <body>
+ 
     <div id='map-container'>
       <div id="heat_panel">
         <button onclick="toggleHeatmap()">Toggle Heatmap</button>
@@ -84,7 +81,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
         <button onclick="changeRadius()">Change radius</button>
         <button onclick="changeOpacity()">Change opacity</button>
       </div>
-      <div id="map-canvas"></div>
+      <div id="map"></div>
     </div>
-  </body>
-</html>
+
