--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -25,7 +25,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Water Fountains <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to fountainsmap_path, 'data-no-turbolink' => true do %>
-              Water Fountains Map</li>
+              Water fountainsmap_pathins Map</li>
               <% end %>
             <li><%= link_to waterfountains_heatmap_path, 'data-no-turbolink' => true do %>
               Water Fountains Heat Map <font color="blue"><i>NEW</i></font></li>
@@ -51,8 +51,27 @@
             </li>
           </ul>
         </li>
+      
+      <% if logged_in? %>
+
+        <li><%= link_to "Users", '#' %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Account <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Settings", '#' %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to "Log out", logout_path, method: "delete" %>
+                </li>
+              </ul>
+            </li>
+      <% else %>
+        <li><button type="button" class="btn btn-default navbar-btn"><%= link_to "Log in", login_path %></button></li>
+      <% end %>
       </ul>
-      <button type="button" class="btn btn-default navbar-btn">Sign in</button>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://youtu.be/dQw4w9WgXcQ">Donate</a></li>
       </ul>
