--- a/app/views/bike_racks/_form.html.erb
+++ b/app/views/bike_racks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@bike_rack) do |f| %>
+<%= bootstrap_form_for(@bike_rack) do |f| %>
   <% if @bike_rack.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@bike_rack.errors.count, "error") %> prohibited this bike_rack from being saved:</h2>
@@ -12,19 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :address %><br>
     <%= f.text_area :address %>
   </div>
   <div class="field">
-    <%= f.label :quantity %><br>
     <%= f.number_field :quantity %>
   </div>
   <div class="field">
-    <%= f.label :latitude %><br>
     <%= f.number_field :latitude %>
   </div>
   <div class="field">
-    <%= f.label :longitude %><br>
     <%= f.number_field :longitude %>
   </div>
   <div class="actions">
