--- a/app/views/water_fountains/_form.html.erb
+++ b/app/views/water_fountains/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@water_fountain) do |f| %>
+<%= bootstrap_form_for @water_fountain do |f| %>
   <% if @water_fountain.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@water_fountain.errors.count, "error") %> prohibited this water_fountain from being saved:</h2>
@@ -12,15 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :location %><br>
     <%= f.text_field :location %>
   </div>
   <div class="field">
-    <%= f.label :lat %><br>
     <%= f.text_field :lat %>
   </div>
   <div class="field">
-    <%= f.label :lon %><br>
     <%= f.text_field :lon %>
   </div>
   <div class="actions">
