--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -25,7 +25,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Water Fountains <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to fountainsmap_path, 'data-no-turbolink' => true do %>
-              Water fountainsmap_pathins Map</li>
+              Water fountains Map</li>
               <% end %>
             <li><%= link_to waterfountains_heatmap_path, 'data-no-turbolink' => true do %>
               Water Fountains Heat Map <font color="blue"><i>NEW</i></font></li>
