--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -22,8 +22,10 @@
         <td><%= water_fountain.lat %></td>
         <td><%= water_fountain.lon %></td>
         <td><%= link_to 'Show', water_fountain %>
-        <%= link_to 'Edit', edit_water_fountain_path(water_fountain) %>
-        <%= link_to 'Destroy', water_fountain, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if admin? %>
+          <%= link_to 'Edit', edit_water_fountain_path(water_fountain) %>
+          <%= link_to 'Destroy', water_fountain, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -39,4 +41,6 @@
 
 <%= link_to 'New Water fountain', new_water_fountain_path %>
 
-<%= button_to "Populate", waterfountains_populateWFData_path %>
+<% if admin? %>
+  <%= button_to "Populate", waterfountains_populateWFData_path %>
+<% end %>
