--- a/app/views/bike_racks/index.html.erb
+++ b/app/views/bike_racks/index.html.erb
@@ -24,9 +24,11 @@
       <td><%= bike_rack.latitude %></td>
       <td><%= bike_rack.longitude %></td>
       <td><%= link_to 'Show', bike_rack %>
-        <% if admin? %>
-          <%= link_to 'Edit', edit_bike_rack_path(bike_rack) %>
-          <%= link_to 'Destroy', bike_rack, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if logged_in? %>
+          <% if admin? %>
+            <%= link_to 'Edit', edit_bike_rack_path(bike_rack) %>
+            <%= link_to 'Destroy', bike_rack, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         <% end %>
     </tr>
     <% end %>
@@ -42,7 +44,9 @@
 
 <%= link_to 'New Bike rack', new_bike_rack_path %>
 
-<% if admin? %>
-  <%= button_to "Populate", bikeracks_populateBRData_path %>
+<% if logged_in? %>
+  <% if admin? %>
+    <%= button_to "Populate", bikeracks_populateBRData_path %>
+  <% end %>
 <% end %>
 
