--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -66,6 +66,9 @@
               </ul>
             </li>
       <% else %>
+<!-- <li><%= link_to login_path, class: 'btn btn-default' do  %>
+          Log in
+        <% end %></li> -->
         <li><button type="button" class="btn btn-default navbar-btn"><%= link_to "Log in", login_path %></button></li>
       <% end %>
       </ul>
