--- a/app/views/water_fountains/index.html.erb
+++ b/app/views/water_fountains/index.html.erb
@@ -22,9 +22,11 @@
         <td><%= water_fountain.lat %></td>
         <td><%= water_fountain.lon %></td>
         <td><%= link_to 'Show', water_fountain %>
-        <% if admin? %>
-          <%= link_to 'Edit', edit_water_fountain_path(water_fountain) %>
-          <%= link_to 'Destroy', water_fountain, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if logged_in? %>
+          <% if admin? %>
+            <%= link_to 'Edit', edit_water_fountain_path(water_fountain) %>
+            <%= link_to 'Destroy', water_fountain, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         <% end %>
       </tr>
     <% end %>
@@ -40,7 +42,8 @@
 <%= link_to "<< Back to Home", root_path %>
 
 <%= link_to 'New Water fountain', new_water_fountain_path %>
-
-<% if admin? %>
-  <%= button_to "Populate", waterfountains_populateWFData_path %>
+<% if logged_in? %>
+  <% if admin? %>
+    <%= button_to "Populate", waterfountains_populateWFData_path %>
+  <% end %>
 <% end %>
